--- a/pages/cart.html
+++ b/pages/cart.html
@@ -12,8 +12,8 @@
 <body>
     <header class="header">
         <div class="header__content">
-            <a href="./shop.html" class="header__item">Shop</a>
-            <a href="./cart.html" class="header__item" id="cart">Shopping Cart</a>
+            <a href="index.html" class="header__item">Shop</a>
+            <a href="./pages/cart.html" class="header__item" id="cart">Shopping Cart</a>
         </div>
     </header>
     <main class="cart">
