--- a/pages/cart.html
+++ b/pages/cart.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header__content">
             <a href="index.html" class="header__item">Shop</a>
-            <a href="./pages/cart.html" class="header__item" id="cart">Shopping Cart</a>
+            <a href="pages/cart.html" class="header__item" id="cart">Shopping Cart</a>
         </div>
     </header>
     <main class="cart">
