--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         </nav>
         <div class="product__block"></div>
     </main>
-    <script src="./js/shop.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="js/shop.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
