--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="product__block"></div>
     </main>
-    <script src="js/shop.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/shop.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
